runtime_probe: Add integer matcher
Add a integer matcher to match integer field.

BUG=b:319392764
TEST=unit test

Change-Id: I8c93e52ec07107b9f0af6e6a3441519269e55b4c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5308567
Tested-by: Chung-sheng Wu <chungsheng@google.com>
Reviewed-by: Allen Shih <allenshihmc@chromium.org>
Commit-Queue: Chung-sheng Wu <chungsheng@google.com>

--- a/runtime_probe/matchers/BUILD.gn
+++ b/runtime_probe/matchers/BUILD.gn
@@ -12,7 +12,10 @@ pkg_config("target_defaults") {
 }
 
 source_set("matchers") {
-  sources = [ "matcher.cc" ]
+  sources = [
+    "field_matcher.cc",
+    "matcher.cc",
+  ]
   configs += [ ":target_defaults" ]
 }
 
