cryptohome: Add PID to cgroup
PID is a required part to operate freezers. This CL adds PID to
cgroup.proc once the process has started.

BUG=b:301136700
TEST=Deploy cryptohome to the device with Key_Eviction flag set. check
/sys/fs/cgroup/greezer/cryptohome/cgroup.proc for pid

Change-Id: I8043cea6f3f9650dd90e2609f6fa313873667677
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5317653
Tested-by: Hardik Goyal <hardikgoyal@chromium.org>
Commit-Queue: Betul Soysal <betuls@google.com>
Auto-Submit: Hardik Goyal <hardikgoyal@chromium.org>
Reviewed-by: Betul Soysal <betuls@google.com>

--- a/cryptohome/BUILD.gn
+++ b/cryptohome/BUILD.gn
@@ -302,7 +302,10 @@ install_config("install_udev_rule") {
 }
 
 install_config("install_tmpfilesd_cryptohome") {
-  sources = [ "tmpfiles.d/cryptohome.conf" ]
+  sources = [
+    "tmpfiles.d/cryptohome.conf",
+    "tmpfiles.d/cryptohome_freezer.conf",
+  ]
   install_path = "tmpfilesd"
 }
 
