trunks: Add PID to freezer Cgroup.proc
PID is a required part to operate freezers. This CL adds PID to
cgroup.proc once the process has started.

BUG=b:301136700
TEST=Once the process is running, check cgroup.proc

Change-Id: I12968df74da005299ade1cce854287e582e9d56f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5318750
Reviewed-by: Betul Soysal <betuls@google.com>
Commit-Queue: Hardik Goyal <hardikgoyal@chromium.org>
Tested-by: Hardik Goyal <hardikgoyal@chromium.org>
Reviewed-by: Yi Chou <yich@google.com>

--- a/trunks/trunksd.conf
+++ b/trunks/trunksd.conf
@@ -20,6 +20,7 @@ env TPM_DYNAMIC=false
 
 # The key eviction feature would be enabled if this variable is true.
 env KEY_EVICTION=false
+env TRUNKSD_FREEZER_CGROUP_DIR=/sys/fs/cgroup/freezer/trunks
 
 pre-start script
   if [ "${TPM_DYNAMIC}" = true ]; then
@@ -60,12 +61,17 @@ pre-start script
       logger -t trunksd "Failed to unbind driver"
   echo "${DEVICE}" > "${DRIVER}/bind" || \
       logger -t trunksd "Failed to bind driver"
-  if [ "${KEY_EVICTION}" = true ]; then
-    /usr/bin/systemd-tmpfiles --create --remove --clean \
-      /usr/lib/tmpfiles.d/on-demand/trunks_freezer.conf
-  fi
 end script
 
 expect fork
 
 exec trunksd
+
+post-start script
+  if [ "${KEY_EVICTION}" = true ]; then
+    /usr/bin/systemd-tmpfiles --create --remove --clean \
+      /usr/lib/tmpfiles.d/on-demand/trunks_freezer.conf
+    echo $(status | cut -f 4 -d ' ') > \
+      "${TRUNKSD_FREEZER_CGROUP_DIR}/cgroup.procs"
+  fi
+end script
