diagnostics: Extract GetPsr implementation from DelegateImpl
Extract the code for easier testing later.

BUG=none
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I9739cb5a46e08d4fa6997f854d830d09b6457236
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5319149
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/fetchers/BUILD.gn
@@ -18,12 +18,14 @@ source_set("fetchers") {
   sources = [
     "boot_performance.cc",
     "display_fetcher.cc",
+    "psr_fetcher.cc",
     "touchpad_fetcher.cc",
   ]
   configs += [ ":target_default" ]
   libs = [ "bootstat" ]
   deps = [
     "//diagnostics/base",
+    "//diagnostics/cros_healthd/mojom:cros_healthd_executor_mojo_bindings",
     "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
   ]
 }
