--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -12,6 +12,11 @@ check-source-files-included = ./common-mk/check-source-files-included.py --commi
 no chrome_dev.conf = ./login_manager/presubmit.sh
 chromeos-config generated files = ./chromeos-config/regen.py --check
 
+# Note: generally we do *not* want to run unit tests in pre-upload.
+# chromeos-config's run_tests script checks PRESUBMIT_COMMIT to ensure we only
+# actually execute in CQ builders.
+chromeos-config unit tests = ./chromeos-config/run_tests
+
 [Hook Overrides]
 cros_license_check: true
 filepath_chartype_check: true
