libstorage: platform: Allow passing dependencies
In the constructor, allow passing dependencies for underlying objects:
lvm, crossystem and loop manager.
Add getter function for crossystem to be used directly by users of
the platform object.

BUG=b:232566569
TEST=unit tests.

Change-Id: I3c23068ec14de07af61927beb7099d96abf4545d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5319721
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/libstorage/platform/BUILD.gn
+++ b/libstorage/platform/BUILD.gn
@@ -78,7 +78,10 @@ source_set("libstorage_fake_platform_sources") {
     "util/get_random_suffix.cc",
   ]
   libs = [ "hwsec-foundation" ]
-  pkg_deps = [ "libbrillo-test" ]
+  pkg_deps = [
+    "libbrillo-test",
+    "libcrossystem-test",
+  ]
   all_dependent_configs = [
     ":target_defaults",
     "//common-mk:test",
