libstorage: Use device-mapper flag
When not set, we should not compile in LVM related objects:
- dmcrypt_container
- logical_volume_backing_device

BUG=b:326437712
TEST=Check `emerge-viking libstorage` passes.

Change-Id: I8e488555787f1eea2c0eb1da7f8ef7b3311d3a75
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5319722
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/libstorage/platform/BUILD.gn
+++ b/libstorage/platform/BUILD.gn
@@ -41,6 +41,10 @@ pkg_config("target_defaults") {
     "rootdev",
     "secure_erase_file",
   ]
+  defines = [
+    "USE_SELINUX=${use.selinux}",
+    "USE_DEVICE_MAPPER=${use.device_mapper}",
+  ]
   if (use.selinux) {
     libs += [ "selinux" ]
   }
@@ -62,7 +66,6 @@ source_set("libstorage_sources") {
     "keyring/utils.cc",
     "platform.cc",
   ]
-  defines = [ "USE_SELINUX=${use.selinux}" ]
   all_dependent_configs = [ ":target_defaults" ]
   configs += [ "//common-mk:pic" ]
 }
