secagentd: Create /var/lib/secagentd directory
This will be used to store affiliation information
about users of the device.

BUG=b:322290467
TEST=Directory created

Disallow-Recycled-Builds: chromite-cq, all
Change-Id: Iafb62fd846f8e3a816d41dac0942649323d7b2cb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5320351
Commit-Queue: Ryan Borzello <rborzello@google.com>
Reviewed-by: Jason Ling <jasonling@chromium.org>
Tested-by: Ryan Borzello <rborzello@google.com>

--- a/secagentd/tmpfiles.d/secagentd.conf
+++ b/secagentd/tmpfiles.d/secagentd.conf
@@ -3,4 +3,10 @@
 # found in the LICENSE file.
 
 # Type  Path  Mode  User  Group  Age  Arguments
+# Affiliation status.
+d= /var/lib/secagentd 0700 secagentd secagentd
+# Restore selinux context.
+z= /var/lib/secagentd - secagentd secagentd
+
+# Log files.
 f= /var/log/secagentd.log 0644 syslog root
