--- a/debugd/share/org.chromium.debugd.conf
+++ b/debugd/share/org.chromium.debugd.conf
@@ -28,6 +28,9 @@
     <deny send_destination="org.chromium.debugd"
           send_interface="org.chromium.debugd"
           send_member="GenerateFirmwareDump" />
+    <deny send_destination="org.chromium.debugd"
+          send_interface="org.chromium.debugd"
+          send_member="ClearFirmwareDumpBuffer" />
     <!-- Only typecd should access the following commands. -->
     <deny send_destination="org.chromium.debugd"
           send_interface="org.chromium.debugd"
@@ -97,6 +100,9 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="GenerateFirmwareDump" />
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="ClearFirmwareDumpBuffer" />
   </policy>
 
   <policy user="typecd">
@@ -121,6 +127,12 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="GenerateFirmwareDump" />
+  </policy>
+
+  <policy user="fbpreprocessor">
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="ClearFirmwareDumpBuffer" />
   </policy>
 
   <limit name="max_replies_per_connection">512</limit>
