fbpreprocessor: log to syslog
Rather than using a dedicated log file, it's better to use syslog for
consistency with the rest of the platform and also to avoid maintaining
different log files.

BUG=b:326501037
TEST=cros workon --board=${BOARD} start fbpreprocessord
TEST=FEATURES=test emerge-${BOARD} fbpreprocessord
TEST=create tryjob that includes the CL, flash on DUT, observe that
fbpreprocessord is WAI and the log messages are in /var/log/messages

Change-Id: I98d0e57c9e10d3e00f5826fb1f34af385119020d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5320490
Commit-Queue: Nicolas Norvez <norvez@chromium.org>
Reviewed-by: Yichen Yu <yichenyu@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>
Tested-by: Nicolas Norvez <norvez@chromium.org>

--- a/fbpreprocessor/init/fbpreprocessord.conf
+++ b/fbpreprocessor/init/fbpreprocessord.conf
@@ -14,7 +14,6 @@ oom score -100
 
 expect fork
 
-env LOG_DIR=/var/log/fbpreprocessord
 env LOG_LEVEL=0
 env DAEMON_STORE=/run/daemon-store/fbpreprocessord
 env FILE_EXPIRATION_SECS=1800
@@ -44,14 +43,12 @@ import LOG_LEVEL
 #   fbpreprocessord starts after the user's cryptohome is already mounted
 #   (e.g. after a crash).
 # - Get a writeable and empty /var tmpfs path.
-# - Mount the log directory in it.
 # - Mount the metrics directory.
 # - Run as fbpreprocessord user and group.
 # - Inherit supplementary groups from user fbpreprocessor.
 # - Grant no caps.
 # - No new privileges (no_new_privs).
 # - Execute the daemon.
-# - Add the log dir.
 # - Set the log level.
 # - Pipe output to fbpreprocessord.out.
 exec minijail0                                                               \
@@ -69,7 +66,6 @@ exec minijail0                                                               \
   -b /run/fbpreprocessord,,1                                                 \
   -k "${DAEMON_STORE},${DAEMON_STORE},none,MS_BIND|MS_REC"                   \
   -k "tmpfs,/var,tmpfs,MS_NODEV|MS_NOEXEC|MS_NOSUID,mode=755,size=10M"       \
-  -b ${LOG_DIR},,1                                                           \
   -b /var/lib/metrics,,1                                                     \
   -b /sys                                                                    \
   -u fbpreprocessor -g fbpreprocessor                                        \
@@ -77,7 +73,5 @@ exec minijail0                                                               \
   -c 0                                                                       \
   -n                                                                         \
   -- /usr/bin/fbpreprocessord                                                \
-  --log_dir=${LOG_DIR}                                                       \
   --log_level=${LOG_LEVEL}                                                   \
-  --file_expiration=${FILE_EXPIRATION_SECS}                                  \
-  >/var/log/fbpreprocessord.out 2>&1
+  --file_expiration=${FILE_EXPIRATION_SECS}
