--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -112,6 +112,7 @@ pkg_config("target_defaults") {
     "libbrillo",
     "libchrome",
     "libcros_config",
+    "libdebugd-client",
     "libmojo",
     "libnet-base",
     "libpatchpanel-client",
@@ -280,6 +281,7 @@ static_library("libshill") {
     "dbus/dbus_control.cc",
     "dbus/dbus_objectmanager_proxy.cc",
     "dbus/dbus_properties_proxy.cc",
+    "dbus/debugd_proxy.cc",
     "dbus/device_dbus_adaptor.cc",
     "dbus/dhcpcd_listener.cc",
     "dbus/dhcpcd_proxy.cc",
