runtime_probe: add tpm probe function
Implement tpm probe function by fetching tpm_manager version info via
cros_healthd.

BUG=b:326535346
TEST=factory_runtime_probe \
     '{"tpm":{"generic":{"eval":{"tpm":{}}}}}'

Change-Id: Icda4e9ae0aa0b4e95f5b30edc748cd54a076be29
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5319112
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Yu-An Wang <wyuang@google.com>
Commit-Queue: Yu-An Wang <wyuang@google.com>

--- a/runtime_probe/functions/BUILD.gn
+++ b/runtime_probe/functions/BUILD.gn
@@ -48,6 +48,7 @@ source_set("functions") {
     "sequence.cc",
     "sysfs.cc",
     "tcpc.cc",
+    "tpm.cc",
     "ufs_storage.cc",
     "usb_camera.cc",
     "vpd_cached.cc",
@@ -78,6 +79,7 @@ if (use.test) {
       "sequence_test.cc",
       "sysfs_test.cc",
       "tcpc_test.cc",
+      "tpm_test.cc",
       "ufs_storage_test.cc",
       "usb_camera_test.cc",
     ]
