fbpreprocessor: create FakeManager for unit tests
|FakeManager| implements the |Manager| interface, to simulate the
behavior of the daemon's Manager class in unit tests.

BUG=b:309365285
TEST=FEATURES=test emerge-${BOARD} fbpreprocessord

Change-Id: I90277b3a1ae2d2358439ce60e225672d7a5e499d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5325203
Reviewed-by: Yichen Yu <yichenyu@chromium.org>
Tested-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Nicolas Norvez <norvez@chromium.org>

--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -95,7 +95,10 @@ if (use.test) {
     pkg_deps = [ "libchrome-test" ]
   }
   executable("fbpreprocessord_test_runner") {
-    sources = [ "firmware_dump_test.cc" ]
+    sources = [
+      "fake_manager.cc",
+      "firmware_dump_test.cc",
+    ]
     configs += [
       "//common-mk:test",
       ":libchrome_test_config",
