init: startup: Add libstorage::platform object
Add platform object alongside startup_dep.
Remove the need to explicity declare LogicalVolumeManager and
Crossystem objects, use platform ones.

BUG=b:172221451
TEST=Unit tests.

Change-Id: I827751c4852cfe930125bfa021c2137b103b64ca
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5332173
Reviewed-by: Alexis Savery <asavery@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -335,7 +335,10 @@ if (use.test) {
       ":libcrosstartup",
       "//common-mk/testrunner",
     ]
-    pkg_deps = [ "libcrossystem-test" ]
+    pkg_deps = [
+      "libcrossystem-test",
+      "libstorage_fake_platform",
+    ]
   }
 
   executable("clobber_state_test") {
