crosier-chrome: Update metadata for recently changed tests.
Remove disabled tests from CI runs and rename another test.

BUG=b:294097177
TEST=Local DUT testing

Cq-Depend: chromium:5322758
Change-Id: I842a0891aaa0f94470ed80ef591d15f4aba15ae1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5320307
Auto-Submit: Alex Bergman <abergman@google.com>
Reviewed-by: Seewai Fu <seewaifu@google.com>
Commit-Queue: Seewai Fu <seewaifu@google.com>
Tested-by: Alex Bergman <abergman@google.com>

--- a/crosier-chrome/test_metadata/interactive_ash_test_uitest.yaml
+++ b/crosier-chrome/test_metadata/interactive_ash_test_uitest.yaml
@@ -5,7 +5,7 @@
 # Schema can be found at: platform/dev/test/gtest/gtest_schema.yaml
 ---
 author: "ChromiumOS Authors"
-name: "AshIntegrationTestTest"
+name: "InteractiveAshTestUITest"
 harness: "crosier"
 category: "integration"
 owners:
@@ -16,5 +16,5 @@ criteria: |
   Basic integration test for Ash browser.
 cases:
   - id: "Basics"
-    tags: ["crosier:crosierdemosuite"]
+    tags: []
 ...
