--- a/crosier-chrome/test_metadata/quick_settings_lacros_integration_test.yaml
+++ b/crosier-chrome/test_metadata/quick_settings_lacros_integration_test.yaml
@@ -18,5 +18,5 @@ criteria: |
   Tests that the device management page opens in Lacros.
 cases:
   - id: "ManagedDeviceInfo"
-    tags: ["crosier:crosierdemosuite"]
+    tags: []
 ...
