--- a/crosier-chrome/test_metadata/smart_dim_lacros_integration_test.yaml
+++ b/crosier-chrome/test_metadata/smart_dim_lacros_integration_test.yaml
@@ -20,5 +20,5 @@ criteria: |
   to query Lacros for web page state.
 cases:
   - id: "SmartDim"
-    tags: ["crosier:crosierdemosuite"]
+    tags: []
 ...
