crosier-chrome: remove another disabled Crosier test from CI runs.
BUG=b:294097177
TEST=Local DUT testing

Change-Id: Ibd3615c6a1741dbc24af954fc2001b0ed2657f6c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5321059
Reviewed-by: Seewai Fu <seewaifu@google.com>
Commit-Queue: Seewai Fu <seewaifu@google.com>
Tested-by: Alex Bergman <abergman@google.com>
Auto-Submit: Alex Bergman <abergman@google.com>

--- a/crosier-chrome/test_metadata/web_approvals_integration_test.yaml
+++ b/crosier-chrome/test_metadata/web_approvals_integration_test.yaml
@@ -16,5 +16,5 @@ criteria: |
   Checks that matures sites are blocked for Unicorn users
 cases:
   - id: "TestMatureSiteBlocked"
-    tags: ["crosier:crosierdemosuite"]
+    tags: []
 ...
