fbpreprocessor: InputManager unit tests
Add some unit tests for InputManager.

BUG=b:309365285
TEST=FEATURES=test emerge-${BOARD} fbpreprocessord

Change-Id: I3a9f96360930c1764e271a2b7d20d6f1a5dbebf2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5352151
Commit-Queue: Nicolas Norvez <norvez@chromium.org>
Reviewed-by: Yichen Yu <yichenyu@chromium.org>
Tested-by: Nicolas Norvez <norvez@chromium.org>

--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -100,6 +100,7 @@ if (use.test) {
       "fake_manager.cc",
       "fake_session_state_manager.cc",
       "firmware_dump_test.cc",
+      "input_manager_test.cc",
       "output_manager_test.cc",
       "pseudonymization_manager_test.cc",
     ]
