camera: Add dirty lens detector in diagnostics
Add dirty lens detector with DLC support in
camera diagnostics.

BUG=b:322984166
TEST=Camera diagnostics can install and load the DLC

Cq-Depend: chromium:5252212
Change-Id: I85807e2c39ae625b63b5146e158fc8e69ac7f471
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5251875
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -23,12 +23,10 @@ generate_mojom_bindings("cros_camera_diagnostics_mojom") {
 executable("cros_camera_diagnostics_service") {
   sources = [
     "camera_diagnostics.cc",
-    "camera_diagnostics.h",
     "camera_diagnostics_impl.cc",
-    "camera_diagnostics_impl.h",
     "camera_diagnostics_main.cc",
     "diagnostics_service_provider.cc",
-    "diagnostics_service_provider.h",
+    "dirty_lens_analyzer.cc",
   ]
   configs += [ "//camera/build:cros_camera_common" ]
   pkg_deps = [
@@ -45,7 +43,11 @@ executable("cros_camera_diagnostics_service") {
     "dl",
     "rt",
   ]
-  deps = [ ":cros_camera_diagnostics_mojom" ]
+  deps = [
+    ":cros_camera_diagnostics_mojom",
+    "//camera/diagnostics/libs:blur_detector",
+    "//ml_core/dlc:dlc_client",
+  ]
   install_path = "bin"
 }
 
