--- a/camera/diagnostics/minijail/cros-camera-diagnostics.conf
+++ b/camera/diagnostics/minijail/cros-camera-diagnostics.conf
@@ -1,5 +1,9 @@
 % minijail-config-file v0
 
+# Copyright 2024 The ChromiumOS Authors
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # Fork and daemonize an init-like process that Upstart will track
 # as the service.
 i
@@ -33,6 +37,7 @@ bind-mount = /dev
 # Create /var and /run in tmpfs to mount necessary subdirectories.
 mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 mount = tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
+mount = /run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV
 
 # Read/Write access to perfetto.
 bind-mount = /run/perfetto,,1
