common-mk: install_seccomp_policy supports installing bpf file
Add a install_compiled_bpf param to this template. If it's set, instead
of installing the original policy file, the compiled bpf file will be
installed.

This patch will not change the behavior of the current usages of this
template.

BUG=b:326852409
TEST=emerge-$BOARD mojo_service_manager; checked that the installed
  policy is still in /build/$BOARD/usr/share/policy/

Cq-Depend: chromium:5385055
Change-Id: I41bd98b813dee171c4cd255860893e4a12fa81f3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5320180
Reviewed-by: Sergey Frolov <sfrolov@google.com>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>

--- a/common-mk/install_seccomp_policy.gni
+++ b/common-mk/install_seccomp_policy.gni
@@ -8,20 +8,13 @@
 # Args:
 #   sources: A list of files to be installed and checked.
 #   install_path: An install destination path.
+#   install_compiled_bpf (optional): A boolean to install the compiled bpf
+#     instead of the original sources.
 
 template("install_seccomp_policy") {
-  _check_seccomp_target = "_${target_name}-check_seccomp"
-  install_config(target_name) {
-    forward_variables_from(invoker,
-                           [
-                             "install_path",
-                             "outputs",
-                             "sources",
-                           ])
-    deps = [ ":${_check_seccomp_target}" ]
-  }
+  _compile_seccomp_target = "_${target_name}-compile_seccomp"
 
-  action_foreach(_check_seccomp_target) {
+  action_foreach(_compile_seccomp_target) {
     forward_variables_from(invoker, [ "sources" ])
     script = "/usr/bin/compile_seccomp_policy"
 
@@ -34,12 +27,30 @@ template("install_seccomp_policy") {
     # mapping of syscall names to numbers.
     # Ref: https://github.com/google/minijail/blob/HEAD/tools/README.md#compile_seccomp_policypy
 
-    outputs = [ "${target_gen_dir}/seccomp/{{source_name_part}}.bpf" ]
+    outputs = [ "${target_gen_dir}/seccomp/{{source_name_part}}.bpf.policy" ]
     args = [
       "--arch-json",
       inputs[0],
       "{{source}}",
       outputs[0],
     ]
+  }
+
+  install_config(target_name) {
+    forward_variables_from(invoker,
+                           [
+                             "install_compiled_bpf",
+                             "install_path",
+                             "outputs",
+                             "sources",
+                           ])
+    if (!defined(install_compiled_bpf)) {
+      install_compiled_bpf = false
+    }
+    if (install_compiled_bpf) {
+      sources = []
+      sources = get_target_outputs(":${_compile_seccomp_target}")
+    }
+    deps = [ ":${_compile_seccomp_target}" ]
   }
 }
