camera: support DMA-buf heap allocation
Add DMA-buf heap as another supported hardware buffer allocator.

BUG=b:312705946
TEST=`USE=test emerge-geralt cros-camera-hwbuf`
TEST=Run benchmark on geralt:
Big Core: `taskset c0 hwbuf_memcpy_benchmark`
Small Core: `taskset 3f hwbuf_memcpy_benchmark`

Disallow-Recycled-Builds: test-failures
Change-Id: I465a8c7640eb1f60da1b283f28dc858755f494ba
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5326263
Commit-Queue: Ricky Liang <jcliang@chromium.org>
Reviewed-by: Shik Chen <shik@chromium.org>
Tested-by: Ricky Liang <jcliang@chromium.org>

--- a/camera/hardware_buffer/BUILD.gn
+++ b/camera/hardware_buffer/BUILD.gn
@@ -4,6 +4,13 @@
 
 import("//common-mk/pkg_config.gni")
 
+group("all") {
+  deps = [ ":libhardware_buffer" ]
+  if (use.test) {
+    deps += [ "//camera/hardware_buffer/tests:all" ]
+  }
+}
+
 pkg_config("target_defaults") {
   configs = [ "//camera/build:cros_camera_common" ]
   pkg_deps = [
@@ -13,9 +20,21 @@ pkg_config("target_defaults") {
 }
 
 source_set("hardware_buffer") {
-  sources = [ "//camera/hardware_buffer/minigbm_allocator.cc" ]
+  sources = [
+    "//camera/hardware_buffer/allocator.cc",
+    "//camera/hardware_buffer/dmabuf_heap_allocator.cc",
+    "//camera/hardware_buffer/minigbm_allocator.cc",
+  ]
+
   public_configs = [ ":target_defaults" ]
 
   # -fPIC needed by the libcros_camera.so shared library.
   configs += [ "//common-mk:pic" ]
+}
+
+shared_library("libhardware_buffer") {
+  output_name = "libhardware_buffer"
+  configs += [ ":target_defaults" ]
+  install_path = "lib"
+  deps = [ ":hardware_buffer" ]
 }
