--- a/arc/vm/scripts/BUILD.gn
+++ b/arc/vm/scripts/BUILD.gn
@@ -10,7 +10,6 @@ group("all") {
     ":install_init_config",
     ":install_init_scripts",
     ":install_rsyslog",
-    ":install_tmpfiles",
   ]
 }
 
@@ -23,6 +22,7 @@ install_config("install_android-sh") {
 install_config("install_init_scripts") {
   sources = [
     "init/arcvm-fsverity-certs.conf",
+    "init/arcvm-host.conf",
     "init/arcvm-post-login-services.conf",
     "init/arcvm-post-vm-start-services.conf",
     "init/arcvm-pre-login-services.conf",
@@ -53,9 +53,4 @@ install_config("install_certs") {
 install_config("install_rsyslog") {
   sources = [ "rsyslog.arc.conf" ]
   install_path = "/etc/rsyslog.d"
-}
-
-install_config("install_tmpfiles") {
-  sources = [ "init/tmpfiles.d/arcvm-host.conf" ]
-  install_path = "tmpfilesd"
 }
