--- a/os_install_service/Cargo.toml
+++ b/os_install_service/Cargo.toml
@@ -8,11 +8,12 @@ edition = "2018"
 anyhow = "1.0"
 chrono = "0.4"
 crossbeam-channel = "0.5"
-dbus = "0.8"
+dbus = "0.9"
+dbus-tree = "0.9"
 lazy_static = "1.4"
 libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
 log = { version = "0.4", features = ["std"] }
-nix = "0.23"
+nix = { version = "0.27", features = ["mount"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3.0"
