--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -37,7 +37,9 @@ cros_installer=cat $(ls -1tr /var/log/update_engine | tail -5 | \
   sed s.^./var/log/update_engine/.) | tail -c 50000
 
 # Dump the last 20 lines of the last two files in Chrome's system and user log
-# directories, along with the last 20 messages from the session manager.
+# directories.
+# Collect the last 2 minutes of system logs, limited to 4000 lines to avoid log
+# flooding.
 # vmlog is included to detect if the system is swapping heavily.
 # The process list is limited in width to save upload size. 120 columns is
 # enough to capture the chrome process --type switch.
@@ -51,8 +53,8 @@ chrome=\
     echo EOF; \
     echo; \
   done; \
-  echo "===session_manager (tail)==="; \
-  awk '$3 ~ "^session_manager\\[" { print }' /var/log/messages | tail -20; \
+  echo "===syslog (tail)==="; \
+  croslog --since=-120 --lines=4000; \
   echo EOF; \
   echo ; \
   echo "===top 100 processes by memory==="; \
