arc: keymint: Add basic RemoteProvisioningContext
This CL just adds the basic ARC Remote Provisioning
Context code to the Arc KeyMint daemon in ChromeOS.

BUG=b:327037217
TEST=emerge-brya chromeos-base/arc-keymint

Change-Id: Ib6cf3ad6363da03b43e8927730ffc90c3456a7d4
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5329510
Reviewed-by: Yao Li <yaohuali@google.com>
Tested-by: Vaibhav Raheja <vraheja@chromium.org>
Commit-Queue: Vaibhav Raheja <vraheja@chromium.org>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -213,6 +213,7 @@ shared_library("libarckeymint_context") {
     "${keymint_src}/contexts/soft_attestation_context.cpp",
     "${keymint_src}/km_openssl/soft_keymaster_enforcement.cpp",
     "context/arc_keymint_context.cc",
+    "context/arc_remote_provisioning_context.cc",
     "context/chaps_client.cc",
     "context/chaps_crypto_operation.cc",
     "context/context_adaptor.cc",
