diagnostics: Add RunNetworkBandwidthTest to executor and delegate
Implement the NdtClient and create seccomp files.

BUG=b:320631510
TEST=emerge-volteer ndt7-client-cc diagnostics
TEST=emerge-cherry ndt7-client-cc diagnostics
TEST=emerge-elm ndt7-client-cc diagnostics

Cq-Depend: chromium:5160221
Change-Id: I86ddb8a2ff71c4e2e2937ecfbc54b99c0046d545
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5327996
Reviewed-by: Chung-sheng Wu <chungsheng@google.com>
Tested-by: Byron Lee <byronlee@chromium.org>
Commit-Queue: Byron Lee <byronlee@chromium.org>

--- a/diagnostics/cros_healthd/delegate/utils/BUILD.gn
+++ b/diagnostics/cros_healthd/delegate/utils/BUILD.gn
@@ -8,6 +8,7 @@ source_set("utils") {
     "edid.cc",
     "evdev_utils.cc",
     "libevdev_wrapper_impl.cc",
+    "ndt_client.cc",
     "psr_cmd.cc",
   ]
   public_pkg_deps = [
@@ -16,7 +17,11 @@ source_set("utils") {
     "libevdev",
     "libmojo",
   ]
-  public_deps = [ "//diagnostics/mojom/public:libcros_healthd_mojo_bindings" ]
+  pkg_deps = [ "libndt7" ]
+  public_deps = [
+    "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
+    "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
+  ]
   deps = [ "//diagnostics/base" ]
 }
 
@@ -25,17 +30,20 @@ if (use.test) {
     sources = [
       "edid_test.cc",
       "evdev_utils_test.cc",
+      "ndt_client_test.cc",
       "psr_cmd_test.cc",
     ]
     pkg_deps = [
       "libchrome",
       "libchrome-test",
       "libevdev",
+      "libndt7",
     ]
     deps = [
       ":utils",
       "//diagnostics/base:healthd_testrunner",
       "//diagnostics/base:test_support",
+      "//diagnostics/cros_healthd/mojom:executor_mojo_bindings",
       "//diagnostics/mojom/public:libcros_healthd_mojo_bindings",
     ]
   }
