--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -68,6 +68,7 @@ install_and_check_seccomp_policy("diagnostics_seccomp_delegate") {
     "${_arch}/evdev-seccomp.policy",
     "${_arch}/fingerprint-seccomp.policy",
     "${_arch}/floating_point-seccomp.policy",
+    "${_arch}/ndt-seccomp.policy",
     "${_arch}/prime_search-seccomp.policy",
     "${_arch}/psr-seccomp.policy",
     "${_arch}/readonly-fetchers-seccomp.policy",
